Add a simple ui

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <script src="javascript.js" defer></script>
 </head>
 <body>
-  
+  <div id="info">
+    <h1>Rock Paper Scissors</h1>
+    <p>Play a game of RPS against the Computer. The game is first to 5.</p>
+    <button id="start">Start/Reset</button>
+  </div>
+  <div id="ui" style="margin-top: 20px; margin-bottom: 20px;" hidden="hidden">
+    <button class="btn">Rock</button>
+    <button class="btn">Paper</button>
+    <button class="btn">Scissors</button>
+    <div id="results">Results:</div>
+    <div id="current-score">Score:</div>
+    <h2 id="final-score"></h2>
 </body>
 </html>
