--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="btn">Rock</button>
     <button class="btn">Paper</button>
     <button class="btn">Scissors</button>
-    <div id="results">Results:</div>
+    <div id="results" style="margin-top: 15px;">Results:</div>
     <div id="current-score">Score:</div>
     <h2 id="final-score"></h2>
 </body>
